--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
         <div1> <b> "Nature"</b> refers to the phenomena of the physical world, and also to life in general. ... The term is often refers to the "natural environment" or wilderness—wild animals, rocks, forest, beaches, and in general areas that have not been substantially altered by humans, or which persist despite human intervention.
         Nature is very importance of humans have needed to survive and thrive, was provided by the natural world around us : food, water, medicine, materials, for shelter, and even natural cycles such us climate and nutrients . Nature is our sole supplier. Some animals give us food.
-       </div1></br>Being in nature, or even viewing scenes of nature, reduces anger, fear, and stress and increases pleasant feelings. Exposure to nature not only makes you feel better emotionally, it contributes to your physical wellbeing, reducing blood pressure, heart rate, muscle tension, and the production of stress hormones.
-
+      </br>Being in nature, or even viewing scenes of nature, reduces anger, fear, and stress and increases pleasant feelings. Exposure to nature not only makes you feel better emotionally, it contributes to your physical wellbeing, reducing blood pressure, heart rate, muscle tension, and the production of stress hormones.
+ </div1>
     </br>
     <p1> <b1> 10 Nature Quotes:-</b1></p1>
        1. Look deep insto nature, and then you will understand everything better. <b> —Albert Einstein </b>
