--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  </div1>
     </br>
     <p1> <b1> 10 Nature Quotes:-</b1></p1>
-       1. Look deep insto nature, and then you will understand everything better. <b> —Albert Einstein </b>
+       1. Look deep into nature, and then you will understand everything better. <b> —Albert Einstein </b>
         2. To me a lush carpet of pine needles or spongy grass is more welcome than the most luxurious Persian rug. <b>—Helen Keller</b> 
         3. Leave the road, take the trails. <b> —Pythagoras</b>
         4.To forget how to dig the earth and to tend the soil is to forget ourselves. <b> —Mahatma Gandhi</b>
