--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
        </br>
 
         <p1> <b1> 10 Nature Quotes:-</b1></p1>
-       1. Look deep insto nature, and then you will understand everything better. <b> —Albert Einstein </b>
+       1. Look deep into nature, and then you will understand everything better. <b> —Albert Einstein </b>
         2. To me a lush carpet of pine needles or spongy grass is more welcome than the most luxurious Persian rug. <b>—Helen Keller</b> 
         3. Leave the road, take the trails. <b> —Pythagoras</b>
         4.To forget how to dig the earth and to tend the soil is to forget ourselves. <b> —Mahatma Gandhi</b>
@@ -332,9 +332,9 @@
   </div>
 </footer>
 
- <!-- <SCript>
-  alert( " THIS IS MESSAGE FROM SUMIT :- THE WEBSITE IS DEVELOPING (IN PROGRESS). AND ONE MORE THING HERE AFTER 2 WEEKS THE CONTENT FULL CHANGED AND NEW BLOGS COME AND IN LAST PLEASE READ THE END ALSO.");
-</SCript> 
- -->
+  <SCript>
+  alert( " THIS IS MESSAGE FROM SUMIT :- I am new website developer if you find any mistakes then Gmail me (G mail ID is on website)
+</SCript>
+
 </body>
 </html>
