--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
     <div class="flex flex-wrap -mx-4 mt-auto mb-auto lg:w-1/2 sm:w-2/3 content-start sm:pr-10">
       <div class="w-full sm:p-4 px-4 mb-6">
-        <h1 class="title-font font-medium text-xl mb-2 text-gray-900">COVID 19 cases across INDIA</h1>
+        <h1 class="title-font font-medium text-xl mb-2 text-gray-900">COVID 19 cases across BHIAR</h1>
         <div class2="leading-relaxed">Coronavirus (Covid-19) BHIAR Lockdown  Live Updates: BHIAR on Thursday reported 14,836 new cases and 61 deaths in the last 24 hours. 
           (^) == means today cases.
         </div>
