--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>SUMIT WEB</title>
     <style>
+      
+      }
       h4{
         font-weight: 800;
         color: rgb(16, 171, 233);
@@ -82,6 +84,14 @@
           </button> -->
         </div>
       </header>
+
+
+      <!-- icon photo 
+
+      <link rel="icon" type="image/png" href="frame.png">
+      <img src="frame.png" alt=" no logo" width="120">-->
+
+    
 
       <!-- next --><section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
@@ -168,7 +178,7 @@
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
     <div class="flex flex-wrap -mx-4 mt-auto mb-auto lg:w-1/2 sm:w-2/3 content-start sm:pr-10">
       <div class="w-full sm:p-4 px-4 mb-6">
-        <h1 class="title-font font-medium text-xl mb-2 text-gray-900">COVID 19 cases across BHIAR</h1>
+        <h1 class="title-font font-medium text-xl mb-2 text-gray-900">COVID 19 cases across INDIA</h1>
         <div class2="leading-relaxed">Coronavirus (Covid-19) BHIAR Lockdown  Live Updates: BHIAR on Thursday reported 14,836 new cases and 61 deaths in the last 24 hours. 
           (^) == means today cases.
         </div>
@@ -285,10 +295,10 @@
 
  <h4 class="img-container" >QR code scanner of this site</h4>
  <div class="img-container">
-    <img  class="img-container" src="frame.png" alt="QR CODE SCANNER" >
+    <img  class="img-container" src="frame.png" alt="QR CODE SCANNER" width="290">
 </div>
 
-<video class="img-container" width="320" height="240" src="VID-20210311-WA0001.mp4" autoplay controls loop ></video>
+<video class="img-container" width="280"  src="VID-20210311-WA0001.mp4" autoplay controls loop ></video>
 
 
 
@@ -333,8 +343,7 @@
 </footer>
 
   <SCript>
-  alert( " THIS IS MESSAGE FROM SUMIT :- I am new website developer if you find any mistakes then Gmail me (G mail ID is on website)
+  alert( " THIS IS MESSAGE FROM SUMIT :- THE WEBSITE IS DEVELOPING (IN PROGRESS). AND ONE MORE THING HERE AFTER 2 WEEKS THE CONTENT FULL CHANGED AND NEW BLOGS COME AND IN LAST PLEASE READ THE END ALSO.");
 </SCript>
-
 </body>
 </html>
