--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
   </div>
 </footer>
 
-  <SCript>
+<!--   <SCript> 
   alert( " THIS IS MESSAGE FROM SUMIT :- THE WEBSITE IS DEVELOPING (IN PROGRESS). AND ONE MORE THING HERE AFTER 2 WEEKS THE CONTENT FULL CHANGED AND NEW BLOGS COME AND IN LAST PLEASE READ THE END ALSO.");
-</SCript>
+</SCript>-->
 </body>
 </html>
