--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="description" content="nature,about nature & 10 quotes on nature">
+    <meta name="keywords" content="nature,covid19 cases in india">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>SUMIT WEB</title>
     <style>
       
@@ -67,7 +70,7 @@
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
            <div>
-             <img src="https://i.pinimg.com/736x/26/5b/11/265b1184cdfc341d454d2e9d1e94795f.jpg" alt="no img" width="50">
+             <img src="favicon.ico" alt="no img" width="50">
            </div>
            <span class="ml-3 text-xl">SUMIT WEBSITE</span>
           </a>
@@ -308,7 +311,7 @@
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
       <div>
-        <img src="https://i.pinimg.com/736x/26/5b/11/265b1184cdfc341d454d2e9d1e94795f.jpg" alt="no img" width="50">
+        <img src="favicon.ico" alt="no img" width="50">
       </div>
       <span class="ml-3 text-xl">SUMIT WEBSITE</span>
     </a>
@@ -342,8 +345,9 @@
   </div>
 </footer>
 
-<!--   <SCript> 
+ <!-- <SCript>
   alert( " THIS IS MESSAGE FROM SUMIT :- THE WEBSITE IS DEVELOPING (IN PROGRESS). AND ONE MORE THING HERE AFTER 2 WEEKS THE CONTENT FULL CHANGED AND NEW BLOGS COME AND IN LAST PLEASE READ THE END ALSO.");
-</SCript>-->
+</SCript> 
+ -->
 </body>
 </html>
