--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         10. If you wish to know the divine, feel the wind on your face and the warm sun on your hand. <b> —Buddha</b>
       
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">if you reload Website photo will change. </button>
-        <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"></button>
+        <button style="margin-right: auto; margin-left: auto; display: block;" class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">if you reload Website photo will change. </button>
+        <!-- <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"></button> -->
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -299,10 +299,10 @@
 
  <h4 class="img-container" >QR code scanner of this site</h4>
  <div class="img-container">
-    <img  class="img-container" src="frame.png" alt="QR CODE SCANNER" width="290">
+    <img style="margin-left: auto; margin-right: auto; display: block;" class="img-container" src="frame.png" alt="QR CODE SCANNER" width="290">
 </div>
 
-<video class="img-container" width="280"  src="VID-20210311-WA0001.mp4" autoplay controls loop ></video>
+<video style="margin-left: auto; margin-right: auto; display: block;" class="img-container" width="280"  src="VID-20210311-WA0001.mp4" autoplay controls loop ></video>
 
 
 <!-- ye dharthi hai -->
