--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
               </nav>
             </div> -->
             
-              <p style="text-align: center;"><strong>NOTICE:- </strong> The website is go up & up day by day so you can take qr code of this site which is available on <b> nature blog</b> (you see this button on top of web)
+              <p style="text-align: center;"><strong>NOTICE:- </strong> The website is go up & up day by day so you can take qr code of this site which is available by physics bhaya 
               </p>
             </div>
           </div6>
