--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           <div6  class="flex flex-wrap md:text-left text-center order-first">
             <div class="lg:w-1/4 md:w-1/2 w-full px-4">
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">SOME OFFICIAL WEBSITES
-                 (you click & go ):-</h2>
+                 you click & go</h2>
               <nav class="list-none mb-10">
                 <li>
                   <a href="
@@ -393,7 +393,7 @@
               </nav>
             </div> -->
             
-              <p style="text-align: center;"><strong>NOTICE:- </strong> The website is go up & up day by day so you can take qr code of this site which is available by physics bhaya 
+              <p style="text-align: center;"><strong>NOTICE:- </strong> The website is go up & up day by day so you can take qr code of this site which is available by physics bhaiya 
               </p>
             </div>
           </div6>
