--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- small animation -->
-  <video style="margin-left: auto; margin-right: auto; display: block;" class="video-container" autoplay control  loop   src="enterprise-garden-1.h264-7c0440d9ce7a46fcf32d46a770621f17a25960e2eb20a64a1bcf9d6972c9f47b.mp4" ></video>
+  <video style="margin-left: auto; margin-right: auto; display: block;" class="video-container" autoplay  loop   src="https://enterprise.github.com/assets/launchpad/hero/enterprise-garden-1.h264-7c0440d9ce7a46fcf32d46a770621f17a25960e2eb20a64a1bcf9d6972c9f47b.mp4" ></video>
 
 <!-- ye head hai -->
     <header class="text-gray-600 body-font">
