--- a/index.html
+++ b/index.html
@@ -75,17 +75,24 @@
             <div class="flex flex-wrap w-1/2">
               <div class="md:p-2 p-1 w-full">
                 <img alt="gallery" class="w-full h-full object-cover object-center block" src="http://source.unsplash.com/601x361/?galaxy">
+              <div class="md:p-2 p-1 w-1/2">
+                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/502x302/?energy">
               </div>
               <div class="md:p-2 p-1 w-1/2">
-                <img alt="gallery" class="w-full object-cover h-full object-center block" src="904760182prism-light-dispersion-waves-animation-1.gif">
-              </div>
-              <div class="md:p-2 p-1 w-1/2">
-                <img alt="gallery" class="w-full object-cover h-full object-center block" src="c9552993eb332654a54bd2fe5610bc6d.gif">
+                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/503x303/?electricity">
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <div>
+        <img style="margin-right: auto; margin-left: auto; display: block;"src="904760182prism-light-dispersion-waves-animation-1.gif" alt="img">
+      </div>
+
+      <div>
+        <img  style="margin-right: auto; margin-left: auto; display: block;" src="c9552993eb332654a54bd2fe5610bc6d.gif" alt="img">
+      </div>
 
      <div> <img style="margin-right: auto; margin-left: auto; display: block;" src="Newtons_cradle_animation_book_2.gif" alt="no img"></div> </br>
 
