--- a/index.html
+++ b/index.html
@@ -85,14 +85,16 @@
           </div>
         </div>
       </section>
+          
+    </br>
 
       <div>
         <img style="margin-right: auto; margin-left: auto; display: block;"src="904760182prism-light-dispersion-waves-animation-1.gif" alt="img">
-      </div>
+      </div></br>
 
       <div>
         <img  style="margin-right: auto; margin-left: auto; display: block;" src="c9552993eb332654a54bd2fe5610bc6d.gif" alt="img">
-      </div>
+      </div></br>
 
      <div> <img style="margin-right: auto; margin-left: auto; display: block;" src="Newtons_cradle_animation_book_2.gif" alt="no img"></div> </br>
 
