--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="ml-3 text-xl">Physics</span>
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-red-900">Home</a>
+            <a href="https://sumitvatsa29.github.io/saurabh-physics.github.io/"  class="mr-5 hover:text-red-900">Home</a>
             <a href="SAURABH SUMAN_Professional Resume – 01.pdf" class="mr-5 hover:text-green-900">About us</a>
             <a class="mr-5 hover:text-yellow-900">Contact Us</a>
 <!--             <a href="https://sumitvatsa29.github.io/sumit.github.io/" class="mr-5 hover:text-white-900">Nature blog</a> -->
@@ -85,16 +85,15 @@
           </div>
         </div>
       </section>
-          
-    </br>
+
 
       <div>
         <img style="margin-right: auto; margin-left: auto; display: block;"src="904760182prism-light-dispersion-waves-animation-1.gif" alt="img">
-      </div></br>
+      </div> </br>
 
       <div>
         <img  style="margin-right: auto; margin-left: auto; display: block;" src="c9552993eb332654a54bd2fe5610bc6d.gif" alt="img">
-      </div></br>
+      </div> </br>
 
      <div> <img style="margin-right: auto; margin-left: auto; display: block;" src="Newtons_cradle_animation_book_2.gif" alt="no img"></div> </br>
 
