--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- small animation -->
-  <video style="margin-left: auto; margin-right: auto; display: block;" class="video-container" autoplay  control loop   src="https://enterprise.github.com/assets/launchpad/hero/enterprise-garden-1.h264-7c0440d9ce7a46fcf32d46a770621f17a25960e2eb20a64a1bcf9d6972c9f47b.mp4" ></video>
+  <video style="margin-left: auto; margin-right: auto; display: block;" class="video-container" autoplay control control loop   src="https://enterprise.github.com/assets/launchpad/hero/enterprise-garden-1.h264-7c0440d9ce7a46fcf32d46a770621f17a25960e2eb20a64a1bcf9d6972c9f47b.mp4" ></video>
 
 <!-- ye head hai -->
     <header class="text-gray-600 body-font">
@@ -36,7 +36,7 @@
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="https://sumitvatsa29.github.io/saurabh-physics.github.io/"  class="mr-5 hover:text-red-900">Home</a>
             <a href="SAURABH SUMAN_Professional Resume – 01.pdf" class="mr-5 hover:text-green-900">About us</a>
-            <a class="mr-5 hover:text-yellow-900">Contact Us</a>
+            <a  href="pp Image 2021.jpeg"  class="mr-5 hover:text-yellow-900">Contact Us</a>
 <!--             <a href="https://sumitvatsa29.github.io/sumit.github.io/" class="mr-5 hover:text-white-900">Nature blog</a> -->
           </nav>
           <!-- <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button 
