--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <img src="favicon.ico" alt="img">
             </div>
-            <span class="ml-3 text-xl">Physics</span>
+            <span class="ml-3 text-xl">Physics</span>(click on home)
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="https://sumitvatsa29.github.io/saurabh-physics.github.io/"  class="mr-5 hover:text-red-900">Home</a>
@@ -76,10 +76,10 @@
               <div class="md:p-2 p-1 w-full">
                 <img alt="gallery" class="w-full h-full object-cover object-center block" src="http://source.unsplash.com/601x361/?galaxy">
               <div class="md:p-2 p-1 w-1/2">
-                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/502x302/?energy">
+                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/503x303/?energy">
               </div>
               <div class="md:p-2 p-1 w-1/2">
-                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/503x303/?electricity">
+                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/502x302/?electricity">
               </div>
             </div>
           </div>
