--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
               <div class="md:p-2 p-1 w-full">
                 <img alt="gallery" class="w-full h-full object-cover object-center block" src="http://source.unsplash.com/601x361/?galaxy">
               <div class="md:p-2 p-1 w-1/2">
-                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/503x303/?energy">
+                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/502x302/?software">
               </div>
               <div class="md:p-2 p-1 w-1/2">
-                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/502x302/?electricity">
+                <img alt="gallery" class="w-full object-cover h-full object-center block" src="http://source.unsplash.com/503x303/?electricity">
               </div>
             </div>
           </div>
