--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <img src="favicon.ico" alt="img">
             </div>
-            <span class="ml-3 text-xl">Physics</span>(click on home)
+            <span class="ml-3 text-xl">Physics</span>( FIRST click on home)
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="https://sumitvatsa29.github.io/saurabh-physics.github.io/"  class="mr-5 hover:text-red-900">Home</a>
