--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                 <img style="border: black;" alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="WhatsApp Image 2.jpeg">
                 <div class="flex-grow sm:pl-8">
-                  <h2 class="title-font font-medium text-lg text-gray-900">SAURAV SUMAN</h2>
+                  <h2 class="title-font font-medium text-lg text-gray-900">SAURABH SUMAN</h2>
                   <h3 class="text-gray-500 mb-3">Physics Bhaiya (ARTICLE WRITER)</h3>
                   <p class="mb-4">Teaching is a noble profession and i have dedicated my life to this act of imparting knowledge. I have been teaching for about a decade but in organised way (in school set-up) i have been teaching for 5 years. I have the privilege  of working with Podar International School Samastipur (Bihar) for two years. I have learnt a great deal of knowledge of physical science.</p>
                   <span class="inline-flex">
