--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <div class="flex w-full mb-20 flex-wrap">
             <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 lg:w-1/3 lg:mb-0 mb-4"> THOUGHTS ON PHYSICS</h1>
             <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base"><strong>Physics is not about remebering equation that many of students think but it is not true 
-              physics is about concepts
-            </strong><b> The study of nature is know as physics</b></p>
+              physics is about concepts.
+            </strong><b> The study of nature is know as physics.</b></p>
           </div>
           <div class="flex flex-wrap md:-m-2 -m-1">
             <div class="flex flex-wrap w-1/2">
