--- a/index.html
+++ b/index.html
@@ -477,12 +477,12 @@
           </div>
         </div>
       </footer>
-     <!-- ye whatsapp ke liye -->
+   <!-- ye whatsapp ke liye -->
 <!-- GetButton.io widget -->
 <script type="text/javascript">
   (function () {
       var options = {
-          whatsapp: "7782857878", // WhatsApp number
+          whatsapp: "+917782857878", // WhatsApp number
           call_to_action: "Message us what you want", // Call to action
           position: "right", // Position may be 'right' or 'left'
       };
