--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
 
          <br></div>
         </p>
+           <p> Free:- If you want dc pandey or cengage or any book of physics (soft copy) then meassage me on whatsaap </p>
+
       </div>
 
     </br>
