--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
   (function () {
       var options = {
           whatsapp: "+917782857878", // WhatsApp number
-          call_to_action: "Message us what you want", // Call to action
+          call_to_action: "Message us your queries", // Call to action
           position: "right", // Position may be 'right' or 'left'
       };
       var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
