--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <title>physics</title>
-    <meta name="description" content="about physics">
-    <meta name="keywords" content="">
+    <title>physics bhaiya </title>
+    <meta name="description" content="about physics | Physics is not about remebering equation that many of students think but it is not true 
+    physics is about concepts.">
+    <meta name="keywords" content="physics bhaiya">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <style>
@@ -167,8 +168,8 @@
 
          <br></div>
         </p>
-           <p> Free:- If you want dc pandey or cengage or any book of physics (soft copy) then meassage me on whatsaap </p>
 
+        <!-- <p> Free:- If you want dc pandey or cengage or any book of physics (soft copy) then meassage me on whatsaap </p> -->
       </div>
 
     </br>
@@ -549,8 +550,8 @@
 <script type="text/javascript">
   (function () {
       var options = {
-          whatsapp: "+917782857878", // WhatsApp number
-          call_to_action: "Message us your queries", // Call to action
+          whatsapp: "+919472540212", // WhatsApp number
+          call_to_action: "Message us what you want", // Call to action
           position: "right", // Position may be 'right' or 'left'
       };
       var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
