--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>physics bhaiya </title>
     <meta name="description" content="about physics | Physics is not about remebering equation that many of students think but it is not true 
     physics is about concepts.">
-    <meta name="keywords" content="physics bhaiya">
+    <meta name="keywords" content="physics bhaiya,suman physics, physicsbhaiya.ga,physicsbhaiya,physicsbhaiya.,physicsbhaiya.g">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <style>
