--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
   (function () {
       var options = {
           whatsapp: "+919472540212", // WhatsApp number
-          call_to_action: "Message us what you want", // Call to action
+          call_to_action: "Message us what your queriess", // Call to action
           position: "right", // Position may be 'right' or 'left'
       };
       var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
