--- a/index.html
+++ b/index.html
@@ -79,16 +79,25 @@
 
      
 </br>
-   <div class="scroll-left" > <p> <marquee behavior="scroll" direction="left">Welcome to the beautifull website here you got physics material and beautiful concepts in some days.</marquee></p></div>
+   <div class="scroll-left" > <p> <marquee behavior="scroll" direction="left">WELCOME TO ALL, HERE YOU GOT KNOW ABOUT INTRESTING THINGS WHICH IS PRESENT IN THIS UNIVERSE.</marquee></p></div>
 
     <!-- ye photo shoot hai -->
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-10 mx-auto flex flex-wrap">
-          <div class="flex w-full mb-20 flex-wrap">
-            <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 lg:w-1/3 lg:mb-0 mb-4"> THOUGHTS ON PHYSICS</h1>
-            <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base"><strong>Physics is not about remebering equation that many of students think but it is not true 
-              physics is about concepts.
-            </strong><b> The study of nature is know as physics.</b></p>
+          <div class="flex w-full mb-10 flex-wrap">
+            <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 lg:w-1/3 lg:mb-0 mb-4">Dark Matter & Dark Energy </h1>
+            <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base"><strong>
+              &#8594;  Across astronomical distances, the only significant fundamental force of physics is gravity. Astronomers find that their calculations & observations don't quite match up, though.
+              <br>
+              &#8594;  An undetected form of matter, called dark matter, was theorized to fix this. Recent evidence supports dark matter.
+              <br>
+              &#8594; Other work indicates that there might exist a dark energy, as well.
+              <br>
+              &#8594; Current estimates are that the universe is 70% dark energy, 25% dark matter, and only 5% of the universe is visible matter or energy.
+            </strong></p>
+            <br>
+
+            <img src="https://i.gadgets360cdn.com/large/univers_matter_ucr_1601450948489.jpg" alt="no img">
           </div>
           <div class="flex flex-wrap md:-m-2 -m-1">
             <div class="flex flex-wrap w-1/2">
