--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
      
 </br>
-   <div class="scroll-left" > <p> <marquee behavior="scroll" direction="left">WELCOME TO ALL, HERE YOU GOT KNOW ABOUT INTRESTING THINGS WHICH IS PRESENT IN THIS UNIVERSE.</marquee></p></div>
+   <div class="scroll-left" > <p> <marquee behavior="scroll" direction="left">WELCOME TO ALL, I am prince kase ho sab.</marquee></p></div>
 
     <!-- ye photo shoot hai -->
       <section class="text-gray-600 body-font">
