--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@
         </div>
       </section>
 
-     <embed type="audio" src="Salaam Rocky Bhai AETrim1620464137919.mp3" hidden="true" >
+          <audio controls autoplay>
+     <embed type="audio" src="Salaam Rocky Bhai AETrim1620464137919.mp3" hidden="true">
       </embed>
-     
-
+     </audio>
       
 
       <!-- ye dhathi hai -->
@@ -566,7 +566,7 @@
 <script type="text/javascript">
   (function () {
       var options = {
-          whatsapp: "+917903470584", // WhatsApp number
+          whatsapp: "+917782857878", // WhatsApp number
           call_to_action: "Message us what you want", // Call to action
           position: "right", // Position may be 'right' or 'left'
       };
