--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
           
           <embed>
 
-          <audio controls autoplay
-                 type="audio" src="Salaam Rocky Bhai AETrim1620464137919.mp3" hidden="true">
+          <audio controls="autoplay"
+                 type="audio" src="Salaam Rocky Bhai AETrim1620464137919 (1).mp3" hidden="true">
     
      </audio>
           </embed>
