--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           <embed>
 
           <audio controls="autoplay"
-                 type="audio" src="Salaam Rocky Bhai AETrim1620464137919 (1).mp3" hidden="true">
+                 type="audio/mp3" src="Salaam Rocky Bhai AETrim1620464137919 (1).mp3" hidden="true">
     
      </audio>
           </embed>
