--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
 </head>
 <body>
 
-
- <audio class = "audio-container" src="Salaam Rocky Bhai AETrim1620464137919 (1).mp3" type="audio/mpeg" autoplay>   
-
-            
-     </audio>
-
+<div>
+ <audio class = "audio-container" src="Salaam Rocky Bhai AETrim1620464137919 (1).mp3" type="audio/mpeg" autoplay loop>    </audio>
+</div>
   <!-- small animation -->
   <video style="margin-left: auto; margin-right: auto; display: block;" class="video-container"   src="https://enterprise.github.com/assets/launchpad/hero/enterprise-garden-1.h264-7c0440d9ce7a46fcf32d46a770621f17a25960e2eb20a64a1bcf9d6972c9f47b.mp4" autoplay loop ></video>
 
