--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <div class="flex-grow sm:pl-8">
                   <h2 class="title-font font-medium text-lg text-gray-900">SUMIT VATSA</h2>
                   <h3 class="text-gray-500 mb-3">WEBSITE Developer</h3>
-                  <p class="mb-4">HELLO! EVERYONE I make this website for students who bore in physics studies i try my best for  good experience here.</p>
+                  <p class="mb-4">HELLO! EVERYONE I make this but i dont know what to do with this😂.</p>
                   <span class="inline-flex">
                     <a class="text-gray-500">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
