--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
      
 </br>
-   <div class="scroll-left" > <p> <marquee behavior="scroll" direction="left">WELCOME TO ANURADHA aur bataoo😂😇.</marquee></p></div>
+   <div class="scroll-left" > <p> <marquee behavior="scroll" direction="left">WELCOME TO ab byyy😇😂.</marquee></p></div>
 
     <!-- ye photo shoot hai -->
       <section class="text-gray-600 body-font">
